--- a/oefening-01-02/recepten.html
+++ b/oefening-01-02/recepten.html
@@ -7,17 +7,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>recepten</title>
     <!-- reset.css -->
-
+    <link rel="stylesheet" href="css/reset.css">
     <!-- Bootstrap CSS -->
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Bootstrap CSS icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <!-- JavaScript: Bootstrap Bundle with Popper -->
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
     <!-- eigen geschreven css voor jouw html-bestand -->
-
+    <link href="./css/style.css" rel="stylesheet">
     <!-- eigen geschreven js voor de recepten -->
-
+    <script src="./js/script-recepten.js" defer></script>
 </head>
 
 <body class="p-3 m-0 border-0 bd-example">
@@ -49,6 +50,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">contact</a>
+          </li>
+          <li>
+            <a class="nav-link" href="recepten.html">recepten</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
